--- a/sunclock1/app/src/main/res/values/arrays.xml
+++ b/sunclock1/app/src/main/res/values/arrays.xml
@@ -42,8 +42,8 @@
 	<item>Etc/GMT+12</item>
     </string-array>
 
-    <string-array name="date_values">
-        <item>today</item>
+    <string-array name="offset_values">
+        <item>none</item>
         <item>manual</item>
     </string-array>
 </resources>
