--- a/sunclock1/app/src/main/res/layout/activity_alarm.xml
+++ b/sunclock1/app/src/main/res/layout/activity_alarm.xml
@@ -7,6 +7,17 @@
     android:background="#000000"
     tools:context="com.gorillasapiens.sunclock1.AlarmActivity">
 
+    <TextView
+        android:id="@+id/alarmHowMany"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="No alarms have been set"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
@@ -51,7 +62,7 @@
         app:layout_constraintBottom_toTopOf="@+id/addButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/alarmHowMany"
         tools:fadeScrollbars="false"
         tools:ignore="SpeakableTextPresentCheck">
 
