--- a/sunclock1/app/src/main/res/layout/activity_alarm.xml
+++ b/sunclock1/app/src/main/res/layout/activity_alarm.xml
@@ -26,6 +26,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="#303030"
         android:text="BACK"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -37,6 +38,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="#303030"
         android:text="Add"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editButton" />
 
@@ -48,6 +50,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="#303030"
         android:text="DEL"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -82,6 +85,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="#303030"
         android:text="Edit"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
