--- a/sunclock1/app/src/main/res/layout/activity_main.xml
+++ b/sunclock1/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,17 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="394dp"
-        android:layout_height="589dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:clickable="true"
         android:contentDescription="image"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/tzButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/alarmsButton"
+        app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@android:drawable/ic_menu_compass" />
 
     <Button
