--- a/sunclock1/app/src/main/res/layout/settings_activity.xml
+++ b/sunclock1/app/src/main/res/layout/settings_activity.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/settings_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
