--- a/sunclock1/app/src/main/res/xml/root_preferences.xml
+++ b/sunclock1/app/src/main/res/xml/root_preferences.xml
@@ -56,5 +56,27 @@
             android:title="@string/manual_offset_title"
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
+    <PreferenceCategory
+        android:title="@string/light_dark_category_title"
+        app:key='"lightdarkcat"'>
+
+        <SeekBarPreference
+            android:defaultValue="0"
+            android:key="light"
+            android:max="3"
+            android:title="@string/light_title"
+            app:min="0"
+            app:updatesContinuously="true" />
+        <SeekBarPreference
+            android:defaultValue="0"
+            android:key="dark"
+            android:max="3"
+            android:title="@string/dark_title"
+            app:min="0"
+            app:updatesContinuously="true" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="Thanks for using ταμ clock!">
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
