--- a/sunclock1/app/src/main/res/layout-land/activity_main.xml
+++ b/sunclock1/app/src/main/res/layout-land/activity_main.xml
@@ -33,6 +33,7 @@
         android:backgroundTint="#303030"
         android:text="⏰"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,6 +47,7 @@
         android:backgroundTint="#303030"
         android:text="🛠️"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -58,8 +60,9 @@
         android:layout_weight="1"
         android:backgroundTint="#303030"
         android:minWidth="64dp"
-        android:text=">"
+        android:text="➡️"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/settingsButton" />
 
@@ -73,6 +76,7 @@
         android:backgroundTint="#303030"
         android:text="🌎"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -85,8 +89,9 @@
         android:layout_weight="1"
         android:backgroundTint="#303030"
         android:minWidth="64dp"
-        android:text="&lt;"
+        android:text="⬅️"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tzButton" />
 
@@ -100,6 +105,7 @@
         android:backgroundTint="#303030"
         android:text="🕙"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
