--- a/sunclock1/app/src/main/res/layout/activity_main.xml
+++ b/sunclock1/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,10 @@
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/tzButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/alarmsButton"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_compass" />
 
     <Button
@@ -74,7 +74,7 @@
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:backgroundTint="#303030"
-        android:text="🌎"
+        android:text="📡"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,5 +108,16 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/modeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#303030"
+        android:text="【🌞】🌍🌔"
+        app:layout_constraintEnd_toStartOf="@id/alarmsButton"
+        app:layout_constraintStart_toEndOf="@id/locationButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
